--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-dom": "^0.14.3",
     "react-redux": "^4.4.0",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "redux": "^3.3.1",
     "redux-actions": "^0.9.1",
     "redux-form": "^7.0.3",
