--- a/package.json
+++ b/package.json
@@ -43,19 +43,19 @@
     "@types/uglify-js": "^3.0.3",
     "@types/webpack-env": "^1.13.6",
     "@types/webpack-hot-middleware": "^2.16.4",
+    "antd": "^3.8.4",
     "babel-plugin-transform-es3-member-expression-literals": "^6.3.13",
     "babel-plugin-transform-es3-property-literals": "^6.3.13",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.5.0",
-    "babel-runtime": "^6.5.0",
+    "babel-runtime": "^6.26.0",
     "classnames": "^2.2.1",
     "es6-promise": "^3.0.2",
     "flux": "^2.1.1",
     "jframes": "^1.0.0",
     "jquery": "^2.2.1",
     "lodash": "^4.17.4",
-    "react": "^0.14.3",
     "react-addons-css-transition-group": "^0.14.7",
-    "react-dom": "^0.14.3",
     "react-redux": "^4.4.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -68,9 +68,10 @@
   },
   "devDependencies": {
     "awesome-typescript-loader": "^0.15.9",
-    "babel": "^6.5.2",
+    "babel": "^6.23.0",
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.4",
+    "babel-plugin-import": "^1.8.0",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.5.0",
@@ -82,7 +83,8 @@
     "install": "0.10.4",
     "marked": "^0.3.5",
     "prettier": "1.14.2",
-    "react": "^0.14.8",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.2",
     "react-hot-loader": "^1.3.0",
     "react-transform-catch-errors": "^1.0.1",
     "react-transform-hmr": "^1.0.1",
